--- a/marker.css
+++ b/marker.css
@@ -3,10 +3,11 @@ body {
     padding: 0px;
     box-sizing: border-box;
 
-    font-family: Roboto;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap
 
 }
 
