--- a/marker.css
+++ b/marker.css
@@ -145,3 +145,12 @@ content {
     text-align: justify;
     color: rgb(120, 120, 120);
 }
+
+.user-photo {
+    width: 90%; /* Зменшує ширину до 50% від батьківського контейнера */
+    max-width: 300px; /* Максимальна ширина 300px */
+    height: auto; /* Автоматична висота для збереження пропорцій */
+    border: 2px solid #000; /* Рамка 2px чорного кольору */
+    border-radius: 10px; /* Закруглення кутів */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Тінь */
+ }
